3.6.2011 git
- changed table tbuser to support encrypted passwords
- changed login method and Change Password window to store encrypted passwords
- keeping backward compatibility to old authentication method to easy upgrade of deltasql
- added ability for administators to reset password of a user
- added salt for MD5 password hashes

1.3.6 Release Notes 2.5.2011

With this release, a set of 7 tutorial videos explaining how deltasql works 
 were created. Those videos need to be downloaded separately, they are
  not included in this package.

New features in 1.3.6:
- RSS feed which shows latest scripts
- ability to give latest version number to edited scripts
- colored diff for edited scripts (works in IE but not in Firefox)


27.4.2011 git
- added RSS feed to deltasql showing latest 20 scripts

23.4.2011 git
- ability to increase version number to latest when editing a script,
 difference in versionnumber is shown in getdiff of history

22.4.2011 
- three more tutorial movies:
050_deltasql_user_management_7min.avi
060_deltasql_editing_scripts_3min.avi
070_deltasql_how_verification_step_works_5min.avi

19.4.2011 git
- created three additional movies on branching and tagging
020_deltasql_branching_and_transforming_schema_to_production_10min.avi
030_deltasql_transforming_schema_from_production_back_to_development_7min.avi
040_deltasql_tagging_7min.avi
- ability to branch from HEAD in "List Branches and tags" added

14.4.2011 git
- created an introductory movie on deltasql as screencast, named
 010_deltasql_how_synchronization_works_14min.avi
- added a link to the tutorial on the main page of deltasql

4.4.2011 git
- added colored diff

1.3.5 Release Notes
New feature: ability to diff scripts stored in history.
New feature: ability to graph development tree for a project in "List Branches and Tags" page.

8.3.2011 git
- Choosing project in order to display its graph in list_branches.php

7.3.2011 git