@@ -4,6 +4,8 @@
 - keeping backward compatibility to old authentication method to easy upgrade of deltasql
 - added ability for administators to reset password of a user
 - added salt for MD5 password hashes
+- automatically encrypting plain passwords at login
+- added FAQ question on how to reset admin password
 
 1.3.6 Release Notes 2.5.2011
 
